# Modules/Currency/App/Models/Currency.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace Modules\Currency\App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Modules\Currency\Database\factories\CurrencyFactory;
+
+class Currency extends Model
+{
+    use HasFactory;
+
+    /**
+     * The attributes that are mass assignable.
+     */
+    protected $fillable = [];
+
+    protected static function newFactory(): CurrencyFactory
+    {
+        // return CurrencyFactory::new();
+    }
+}
